--- a/quiz.css
+++ b/quiz.css
@@ -59,3 +59,8 @@ input[type = button]{
   text-align: center;
   font-size: 20px;
 }
+.message{
+  font-size: 20px;
+  text-align: center;
+  margin: 20px;
+}
